<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Points:</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>

    <!-- The text for the Move buttons -->
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_right">Right</string>
    <string name="move_down">Down</string>
    <string name="time">Time:</string>
    <string name="action_share">Share Score</string>
    <string name="level">Level:</string>
</resources>
