<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context="com.hfad.pacman.MainActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    android:background="@color/colorDarkBlue">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <!-- The view for points -->
        <TextView
            android:id="@+id/points"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/points"
            android:textColor="#ffffff"/>

        <!-- The view for countdown timer -->
        <TextView
            android:id="@+id/gameTimer"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/time"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_gravity="center_vertical">

        <!-- The Pause button -->
        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:layout_weight="1"
            android:src="@drawable/pause_button" />

        <!-- The Continue button -->
        <ImageButton
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:layout_weight="1"
            android:src="@drawable/continue_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <!-- The view for level -->
        <TextView
            android:id="@+id/level"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="#ffffff"/>

    </LinearLayout>

</LinearLayout>

<!-- The custom gameView -->
<com.hfad.pacman.GameView
    android:id="@+id/gameView"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp">

</com.hfad.pacman.GameView>

<!-- The Buttons to move Pacman - Left, Up, Right, Down -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:orientation="horizontal"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center_vertical">

        <!-- LEFT -->
        <Button
            android:id="@+id/moveLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/move_left"
            android:background="@color/colorDarkBlue"
            android:textColor="@color/colorLight"
            android:layout_margin="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <!-- UP -->
        <Button
            android:id="@+id/moveUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move_up"
            android:background="@color/colorDarkBlue"
            android:textColor="@color/colorLight"
            android:layout_margin="2dp"/>

        <!-- DOWN -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_down"
            android:id="@+id/moveDown"
            android:background="@color/colorDarkBlue"
            android:textColor="@color/colorLight"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center_vertical">

        <!-- RIGHT -->
        <Button
            android:id="@+id/moveRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move_right"
            android:background="@color/colorDarkBlue"
            android:textColor="@color/colorLight"
            android:layout_margin="2dp"/>

    </LinearLayout>

</LinearLayout>

</LinearLayout>
